# code_template

./: button  cmake_tutorial  coge  mall-mytemplate  member-ddd-jpa  modulize-order  portal  react-ts  simple-member  vue-rollup-component-template  vue_template  x-engine-jsi-template  x-engine-module-engine  x-engine-module-nav  x-engine-module-template  x-engine-native-template  x-engine-native-updator
app/: demo.py  requirements.txt
app/cg/: cg.py
app/cgr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
c/cmd/: Makefile  main.cxx  work.cxx
c/opengl/: .coge.before.copy.py
go/bestpractice/: go.mod
go/cmd/: Makefile  demo.json  go.mod  main.go
go/rabbit/: Makefile
java/cmd/: pom.xml
java/lock/: MyLock.java
python/python_cli2/: Makefile  pyproject.toml
python/python_cli2/cli2/: a.py  main.py
python/python_cli2/cli2/fmoudle/: c.py
python/python_cli2/cli2/module1/: __init__.py  d.py  e.py
python/python_cli2/python_cli2/: main.py
python/python_cli2/tests/: test_e.py  test_main.py
react-js/: .coge.after.sh  package-lock.json
react-ts/: .coge.after.sh  package-lock.json  package.json
react-vite-js/: package.json
react-vite-tailwind-ts/: index.html  package-lock.json  package.json
react-vite-ts/: package.json
react-vite-zustand-js/: .coge.after.sh  package.json  pnpm-lock.yaml
sh/: demo.sh
springboot-pure/: README.md  pom.xml
vue-js/: README.md  package.json  pnpm-lock.yaml
vue-ts/: package.json
vue-vite-js/: package.json
vue-vite-router-starter/: package.json  pnpm-lock.yaml
vue-vite-ts/: package.json
(+342 files in other folders)
